Button width fixed on mobile

--- a/src/Components/Button/style.scss
+++ b/src/Components/Button/style.scss
@@ -98,7 +98,7 @@
 @media only screen and (max-width: 600px) {
   .dark-mode .btn-component,
   .light-mode .btn-component {
-    width: 140px;
+    // width: 140px;
     height: 49px;
   }
   .pricing-list {
